--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<com.zhy.autolayout.AutoRelativeLayout
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:background="@drawable/splash"
               android:layout_width="match_parent"
@@ -10,8 +10,8 @@
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:textColor="#000000"
-        android:layout_marginBottom="@dimen/splash_margin_bottom"
+        android:layout_marginBottom="48px"
         android:layout_height="wrap_content"
-        android:textSize="28sp"
+        android:textSize="48px"
         android:text="@string/wm_mall"/>
-</RelativeLayout>
+</com.zhy.autolayout.AutoRelativeLayout>
